--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "telegram-sonarr-bot",
-  "version": "0.3.0",
-  "description": "A Telegram bot to interact with your Sonarr Web App",
+  "name": "telegram-radarr-bot",
+  "version": "0.3.1",
+  "description": "A Telegram bot to interact with your Radaar Web App",
   "dependencies": {
-    "bluebird": "v3.0.6",
+    "bluebird": "v3.5.1",
     "fs-extra": "^0.26.4",
     "i18n": "^0.5.0",
     "lodash": "^4.0.0",
@@ -14,9 +14,9 @@
     "sonarr-api": "^0.1.2",
     "winston": "^2.1.1"
   },
-  "repository": "git://github.com/onedr0p/telegram-sonarr-bot",
+  "repository": "git://github.com/itsmegb/telegram-radarr-bot",
   "keywords": [
-    "sonarr",
+    "radarr",
     "telegram"
   ],
   "engines": {
@@ -25,6 +25,6 @@
   "author": "Devin Buhl <devin.kray@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node sonarr.js"
+    "start": "node radarr.js"
   }
 }
