Refactored everything from Sonarr to Radarr (except the radarr-api!)

--- a/config.json.template
+++ b/config.json.template
@@ -9,10 +9,10 @@
     "maxResults": 15,
     "lang": "en"
   },
-  "sonarr": {
+  "radarr": {
     "hostname": "",
     "apiKey": "",
-    "port": 8989,
+    "port": 7878,
     "urlBase": "",
     "ssl": false,
     "username": "",
